Fix initialization of the user preferences in the transform tool

We cannot read settings in the contructor, because the toolId() is
not yet available (due to the absence of factory() pointer set).

So the patch moves this initialization into activate() method,
which is mode stable.

BUG:435255